feat: add a feature to create/edit a rule
